; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_ina3221.c_ina3221_interval_ms_to_conv_time.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_ina3221.c_ina3221_interval_ms_to_conv_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INA3221_CONFIG_CHs_EN_MASK = common dso_local global i32 0, align 4
@ina3221_avg_samples = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32)* @ina3221_interval_ms_to_conv_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ina3221_interval_ms_to_conv_time(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @INA3221_CONFIG_CHs_EN_MASK, align 4
  %10 = and i32 %8, %9
  %11 = call i64 @hweight16(i32 %10)
  store i64 %11, i64* %5, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i64 @INA3221_CONFIG_AVG(i32 %12)
  store i64 %13, i64* %6, align 8
  %14 = load i64*, i64** @ina3221_avg_samples, align 8
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds i64, i64* %14, i64 %15
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %7, align 8
  %18 = load i32, i32* %4, align 4
  %19 = mul nsw i32 %18, 1000
  %20 = sdiv i32 %19, 2
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* %7, align 8
  %23 = mul i64 %21, %22
  %24 = call i64 @DIV_ROUND_CLOSEST(i32 %20, i64 %23)
  ret i64 %24
}

declare dso_local i64 @hweight16(i32) #1

declare dso_local i64 @INA3221_CONFIG_AVG(i32) #1

declare dso_local i64 @DIV_ROUND_CLOSEST(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
